[package]
name = "iamy"
version = "0.1.0"
edition = "2024"

[dependencies]
andromeda-fungible-tokens = "1.0.0"
andromeda-non-fungible-tokens = "1.0.0"
andromeda-std = "1.0.0"
anyhow = "1.0.98"
cosmos-sdk-proto = { version = "0.27", default-features = false, features = ["cosmwasm"] }
cosmwasm-std = "2.2.2"
fs = "0.0.5"
rand = "0.9.1"
rig-core = "0.12.0"
schemars = "0.8.22"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
